Fix behavior on clicking cancel, and add spacing between notices

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/serval-administration/onboarding-request-detail/approve-request-dialog/approve-request-dialog.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/serval-administration/onboarding-request-detail/approve-request-dialog/approve-request-dialog.component.scss
@@ -36,3 +36,7 @@ h3:first-of-type {
   color: colors.$info-color;
   background-color: #e8f0fe;
 }
+
+app-notice {
+  margin-top: 1em;
+}
